# BusinessCase

./: .env  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py
backend/app/app/: initial_data.py  tests_pre_start.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: items.py  utils.py  vacancies.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  crud_item.py
backend/app/app/db/: base.py  init_db.py
backend/app/app/models/: __init__.py  business.py  item.py  vacant.py
backend/app/app/schemas/: __init__.py  business.py  vacancy.py  vacant.py
backend/app/app/tests/api/api_v1/: test_business.py
backend/app/app/tests/crud/: test_business.py
backend/app/app/tests/utils/: utils.py
